--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.23.1",
+    "axios": "^1.7.2",
     "chance": "^1.1.9",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-helmet": "^6.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
