--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_baseURL='https://walrus-app-nubv5.ondigitalocean.app'
-REACT_APP_USER_NAME='Hector'
-REACT_APP_USE_PASSWORD='123456'
+REACT_APP_ServerURL=http://localhost:80
+RRRRR= https://walrus-app-nubv5.ondigitalocean.app
+
