--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_ServerURL=http://localhost:80
-RRRRR= https://walrus-app-nubv5.ondigitalocean.app
+REACT_APP_ServerURL=https://walrus-app-nubv5.ondigitalocean.app
+
 
